--- a/Jenny.properties
+++ b/Jenny.properties
@@ -1,5 +1,7 @@
 Jenny.SearchPaths = Assets\Libraries\DesperateDevs\Editor\Plugins, \
-                    Assets\Libraries\Entitas\Editor\Plugins
+                    Assets\Libraries\Entitas\Editor\Plugins, \
+                    Assets\Plugins\submodules\EntitasCore\Libraries\DesperateDevs\Editor\Plugins, \
+                    Assets\Plugins\submodules\EntitasCore\Libraries\Entitas\Editor\Plugins
 
 Jenny.Plugins = DesperateDevs.CodeGeneration.Plugins, \
                 DesperateDevs.CodeGeneration.Unity.Plugins, \
@@ -47,11 +49,11 @@ Jenny.Server.Port = 3333
 Jenny.Client.Host = localhost
 DesperateDevs.CodeGeneration.Plugins.ProjectPath = Assembly-CSharp.csproj
 Entitas.CodeGeneration.Plugins.Assemblies = Library/ScriptAssemblies/Assembly-CSharp.dll
-Entitas.CodeGeneration.Plugins.Contexts = Game, \
-                                          Input, \
+Entitas.CodeGeneration.Plugins.Contexts = ServerGame, \
+                                          ServerInput, \
                                           LobbyUi, \
-                                          Lootbox, \
-                                          WppAccrual
+                                          WppAccrual, \
+                                          Lootbox
 
 Entitas.CodeGeneration.Plugins.IgnoreNamespaces = true
-DesperateDevs.CodeGeneration.Plugins.TargetDirectory = Assets/Code
+DesperateDevs.CodeGeneration.Plugins.TargetDirectory = Assets/Plugins/submodules/EntitasCore/Entitas
